--- a/index.html
+++ b/index.html
@@ -2,314 +2,128 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>English 3 Speaking Milestone 3</title>
-
-  <!-- لا نربط favicon لتفادي 404 على GitHub Pages -->
-  <!-- <link rel="icon" href="data:,"> -->
-
-  <!-- مكتبات محلية (تأكد أنها موجودة بجانب index.html) -->
-  <script src="jquery-3.6.4.min.js"></script>
-  <script src="jquery-ui.min.js"></script>
-  <script src="jquery.ui.touch-punch.min.js"></script>
-
+  <link rel="icon" href="icon-192.png">
   <style>
-    body{margin:0}
-    #cont{ text-align:center; height:95vh; width:95vw; overflow:auto; margin:auto;}
-    .promptHolder{
-      background:#f7f7f7;border:2px solid #EBEBEB;color:#468283;
-      font-size:calc(1.75vw + 1.75vh); width:90%; border-radius:10px;
-      margin:auto; font-family:'Trebuchet MS','Lucida Sans Unicode','Lucida Grande','Lucida Sans',Arial,sans-serif;
-      justify-content:center; align-items:center; padding:1em;
-    }
-    #pageHead{color:#468283;font-family:'Trebuchet MS','Lucida Sans Unicode','Lucida Grande','Lucida Sans',Arial,sans-serif}
-    #overlay{
-      position:fixed; inset:0; background:rgba(255,255,255,.85);
-      display:flex; align-items:center; justify-content:center; z-index:1000;
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      text-align:center; padding:16px;
-    }
-    .butt{
-      background:#84BD00; color:#fff; border-radius:6px; width:120px;
-      left:50%; transform:translateX(-50%); padding:12px; text-align:center;
-      font-family:'Trebuchet MS','Lucida Sans Unicode','Lucida Grande','Lucida Sans',Arial,sans-serif;
-      font-size:1.25em; box-shadow:0 2px 5px rgba(0,0,0,.3); position:fixed; bottom:20px; cursor:pointer;
-    }
-    .butt:active{transform:translateX(-50%) scale(.97); box-shadow:0 2px 4px rgba(0,0,0,.3)}
-    .pCount{width:93vw;text-align:center;font-family:'Trebuchet MS','Lucida Sans Unicode','Lucida Grande','Lucida Sans',Arial,sans-serif}
-    .zoom{position:fixed; inset:0; background:rgba(255,255,255,.95); z-index:999}
-    #image_holder{width:90%; justify-content:center; cursor:pointer; display:none; margin:auto; overflow:visible}
-    #promptPic{display:block; margin:10px auto; max-width:250px; max-height:150px; box-shadow:0 2px 2px rgba(0,0,0,.3); cursor:pointer}
-    #closeX{position:absolute; right:2%; display:none; background:#000; color:#fff; border-radius:20px; padding:5px 8px; font:bold 14px arial; cursor:pointer}
-    @media (max-width:750px){ .promptHolder{font-size:2em;width:85%} .pCount{width:85%; padding-left:5rem} }
-    @media (max-width:500px){ .pCount{padding-left:3rem} #promptPic{max-width:150px} }
-    .hint{font-size:14px; color:#555; margin-top:10px}
+    body{font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;margin:0;background:#f6f6f6;color:#214;}
+    .wrap{max-width:900px;margin:0 auto;padding:24px}
+    h1{color:#468283;margin:0 0 12px}
+    .card{background:#fff;border:1px solid #e7e7e7;border-radius:12px;padding:20px;box-shadow:0 2px 6px rgba(0,0,0,.05)}
+    #prompt{font-size:22px;line-height:1.5;margin:8px 0 12px}
+    .meta{display:flex;gap:8px;align-items:center;color:#666;font-size:14px;margin-bottom:8px}
+    #imgBox{display:none;text-align:center;margin-top:6px}
+    #imgBox img{max-width:260px;max-height:160px;border-radius:8px;box-shadow:0 1px 3px rgba(0,0,0,.2)}
+    #btn{position:fixed;left:50%;transform:translateX(-50%);bottom:20px;background:#84BD00;color:#fff;border:none;border-radius:10px;padding:12px 24px;font-size:20px;box-shadow:0 4px 10px rgba(0,0,0,.15);cursor:pointer}
+    #btn:active{transform:translateX(-50%) scale(.98)}
+    #done{display:none;text-align:center;font-size:22px;color:#2a7}
   </style>
+  <!-- تحميل الأسئلة الثابتة -->
+  <script src="prompts.js"></script>
 </head>
 <body>
-
-  <!-- شاشة تحميل + Unlock للصوت على iOS -->
-  <div id="overlay">
-    <div>
-      <div style="font-size:20px; margin-bottom:8px">Loading…</div>
-      <div class="hint">إذا طال التحميل: اضغط “Enable Audio & Start” لتفعيل الصوت على iOS.</div>
-      <div id="unlockBtn" class="butt" style="position:static; width:auto; margin:16px auto 0; transform:none;">Enable Audio & Start</div>
-      <div id="fallbackMsg" class="hint" style="display:none; max-width:520px; margin:10px auto 0">
-        يبدو أن تحميل الأسئلة عن بُعد ممنوع (CORS). سنستعمل النسخة المحلية إذا كانت موجودة.<br/>
-        تأكد من وجود ملف <b>prompts_local.js</b> بجانب هذه الصفحة.
-      </div>
+  <div class="wrap">
+    <h1>English 3 Speaking Milestone 3</h1>
+    <div class="card">
+      <div class="meta"><span id="counter">0 / 12</span></div>
+      <div id="prompt">Tap “Start” to begin.</div>
+      <div id="imgBox"><img id="pimg" alt="" /></div>
+      <div id="done">You have finished.</div>
     </div>
   </div>
 
-  <div id="cont" hidden>
-    <h1 id="pageHead" style="display:none;">English 3 Speaking Milestone 3</h1>
-    <div id="pCount" class="pCount" style="display:none">
-      <div style="margin-left:auto; margin-right:0; margin-bottom:5px; width:75px; padding:5px; border-radius:7px;">
-        <span id="pno" style="font-size:1.25em"></span><span id="pto"></span>
-      </div>
-    </div>
-
-    <div class="promptHolder" id="promptHolder">
-      <h2 class="iHead" style="font-size:2rem; margin:0 0 1.5rem 0">English 3 Speaking Milestone 3</h2>
-      <div class="iText" style="font-size:1.5rem; font-weight:500; margin-top:.5rem">
-        <span style="font-weight:bold">This assessment covers these functions:</span>
-      </div>
-      <div class="iText" style="display:flex; justify-content:center; margin-left:auto; font-size:1.5rem;">
-        <ul style="text-align:left;">
-          <li>Talking about rules</li><li>Making, accepting, and refusing offers</li>
-          <li>Talking about willingness</li><li>Inviting and handling questions</li>
-          <li>Asking for, offering, and providing clarification</li><li>Talking about requirements</li>
-          <li>Talking about mistakes</li><li>Talking about abbreviations</li>
-          <li>Assigning tasks</li><li>Talking about responsibilities</li>
-          <li>Talking about purpose and function</li><li>Talking about range and duration</li>
-        </ul>
-      </div>
-    </div>
-
-    <div id="image_holder" style="display:none; position:relative">
-      <span id="closeX" onclick="closeImg()">X</span>
-      <img id="promptPic" src="" onclick="enlarge()">
-      <p id="cap" style="text-align:center; font-family:'Trebuchet MS'">Tap to enlarge</p>
-    </div>
-
-    <div style="margin-top:2em">
-      <div class="butt" id="butt"  onclick="introPage()">Continue</div>
-      <div class="butt" id="butt1" style="display:none" onclick="landingPage()">OK</div>
-      <div class="butt" id="butt2" style="display:none" onclick="startActivity()">Start</div>
-      <div class="butt" id="butt3" style="display:none" onclick="startOver()">Restart</div>
-    </div>
-  </div>
+  <button id="btn">Start</button>
 
   <script>
-  // ---------- متغيرات عامة ----------
-  const resources_bb_url = "https://aramco.blackboard.com/bbcswebdav/orgs/PEC/COMMON/TRY_IT/E3M/";
-  let promptBank = [];      // قائمة الأسئلة النهائية
-  let audioElements = [];   // مقاطع الصوت لكل سؤال
-  let sounds = [];          // مسارات الصوت
-  let counter = 0;
+    // ===== إعدادات عامة =====
+    const bank = Array.isArray(window.prompts) ? window.prompts.slice(0, 12) : [];
+    const btn   = document.getElementById('btn');
+    const promptEl = document.getElementById('prompt');
+    const counterEl = document.getElementById('counter');
+    const imgBox = document.getElementById('imgBox');
+    const pimg   = document.getElementById('pimg');
+    const doneEl = document.getElementById('done');
 
-  // ملفات المقدمة/النهاية (محلية)
-  const badge   = new Audio("E3_SM3_Intro.mp3");
-  const instr   = new Audio("E3_4_SM3_Inst.mp3");
-  const endBlurb= new Audio("E3_E4_End.mp3");
+    // قناة صوت واحدة — لا تداخل
+    const player = new Audio();
+    player.preload   = 'auto';
+    player.playsInline = true;  // مهم للآيباد/آيفون
 
-  // ---------- أدوات الصوت: تشغيل نظيف + تهيئة مسبقة ----------
-  function whenReady(a){ return new Promise(res=>{ a.readyState>=2 ? res() : a.addEventListener('canplay', res, {once:true}); }); }
-  async function playClean(a){
-    try{
-      a.preload='auto'; a.pause(); a.currentTime=0; a.load();
-      await whenReady(a);
-      await new Promise(r=>setTimeout(r,40)); // مهلة قصيرة لمنع قصّ البداية
-      await a.play();
-    }catch(_){/* iOS قد يرفض قبل تفاعل المستخدم */}
-  }
-  function primeAudios(list){ (list||[]).forEach(a=>{ try{ a.preload='auto'; a.load(); }catch(_){} }); }
+    let i = -1; // الفهرس الحالي (-1 قبل البداية)
 
-  // ---------- زر تمكين الصوت (iOS) ----------
-  document.getElementById('unlockBtn').addEventListener('click', async ()=>{
-    try{
-      await badge.play(); badge.pause(); badge.currentTime=0;
-      await instr.play(); instr.pause(); instr.currentTime=0;
-      await endBlurb.play(); endBlurb.pause(); endBlurb.currentTime=0;
-    }catch(_){}
-    document.getElementById('overlay').style.display='none';
-    document.getElementById('cont').hidden=false;
-  }, {once:true});
+    function updateCounter() {
+      counterEl.textContent = `${Math.min(i+1, bank.length)} / ${bank.length}`;
+    }
 
-  // ---------- شَفل بسيط ----------
-  function shuffle(arr){let i=arr.length,t,r;while(i){r=Math.floor(Math.random()*i--);t=arr[i];arr[i]=arr[r];arr[r]=t;}return arr;}
-
-  // ---------- واجهة التنقل ----------
-  window.introPage = function(){
-    $("#butt").hide();
-    $("#promptHolder").html(`<h2 class="iHead" style="font-size:2rem">English 3 Speaking Milestone 3</h2>
-      <div class="iText" style="font-size:1.5rem; font-weight:500; margin-top:8vh">
-        <p style="line-height:2rem;">Please say your name and badge number.</p><p>Tap OK to proceed.</p>
-      </div>`);
-    $("#butt1").fadeIn(300);
-    playClean(badge);
-  }
-  window.landingPage = function(){
-    badge.pause();
-    $("#butt1").hide();
-    $("#promptHolder").html(`<h2 class="iHead" style="font-size:2rem">English 3 Speaking Milestone 3</h2>
-      <div class="iText" style="font-size:1.5rem; font-weight:500; margin-top:8vh; line-height:1.5rem">
-        <p>You will see and hear 12 random prompts from modules 17 to 28 of this course.</p>
-        <p>After you hear each prompt, you should respond.</p>
-        <p>If you see a picture with your prompt, you can tap the picture to make it bigger.</p>
-        <p>After you respond, tap the “Next” button to move to the next prompt.</p>
-        <p>When you are ready, tap the “Start” button to begin.</p>
-      </div>`);
-    $("#butt2").fadeIn(300);
-    playClean(instr);
-  }
-  window.startActivity = function(){
-    instr.pause();
-    $("#butt2").hide();
-    $("#pageHead").show();
-    $("#butt2").text("Next");
-    document.getElementById('image_holder').style.display="none";
-    counter++;
-
-    if(counter>promptBank.length){
-      $("#promptHolder").text("You have finished.");
-      $("#pCount").hide();
-      $("#butt2").hide();
-      $("#butt3").fadeIn(200);
-      endBlurb.play();
-    }else{
-      $("#pCount").show();
-      $("#promptHolder").text(promptBank[counter-1].text);
-      playClean(audioElements[counter-1]);
-      $("#pno").text(counter+" / ");
-      if(promptBank[counter-1].image){
-        document.getElementById('image_holder').style.display="block";
-        document.getElementById('promptPic').src = promptBank[counter-1].image;
-      }else{
-        document.getElementById('image_holder').style.display="none";
+    function showPrompt(item) {
+      promptEl.textContent = item.text || '';
+      if (item.image) {
+        pimg.src = item.image;
+        imgBox.style.display = 'block';
+      } else {
+        imgBox.style.display = 'none';
+        pimg.removeAttribute('src');
       }
     }
-  }
-  window.enlarge = function(){
-    $("#image_holder").addClass('zoom');
-    const img=document.getElementById('promptPic');
-    img.style.maxWidth="80vw"; img.style.maxHeight="75vh";
-    document.getElementById('cap').style.backgroundColor="#fff";
-    document.getElementById('cap').style.fontSize="1.1rem";
-    document.getElementById('cap').innerText = document.getElementById('promptHolder').innerText;
-    document.getElementById('closeX').style.display="block";
-  }
-  window.closeImg = function(){
-    $("#cap").text("Tap to enlarge"); document.getElementById('cap').style.fontSize="1rem";
-    $('#image_holder').removeClass('zoom');
-    document.getElementById('promptPic').style.maxWidth="250px";
-    document.getElementById('closeX').style.display="none";
-  }
-  window.startOver = function(){ location.reload(); }
 
-  // ---------- محاولة استخدام أسئلة محلية أولاً ----------
-  async function useLocalPromptsIfAvailable(){
-    return new Promise(resolve=>{
-      const s=document.createElement('script');
-      s.src='prompts_local.js'; // يجب أن يعرّف window.PROMPTS_LOCAL = [...];
-      s.onload=()=>{
-        if(Array.isArray(window.PROMPTS_LOCAL) && window.PROMPTS_LOCAL.length){
-          promptBank = window.PROMPTS_LOCAL.slice(0); // نسخ
-          finalizePrompts(true);
-          resolve(true);
-        }else{
-          resolve(false);
-        }
-      };
-      s.onerror=()=>resolve(false);
-      document.head.appendChild(s);
-    });
-  }
+    function playAudioFor(item) {
+      // إن كان الصوت مفقود، نُظهر Next مباشرة
+      const src0 = item.audio || '';
+      const src  = src0 && !/\.mp3$/i.test(src0) ? (src0 + '.mp3') : src0;
 
-  // ---------- تحميل من Blackboard (قد يُمنَع بسبب CORS) ----------
-  const targetFunctions = [
-    {func:"TALKING_ABOUT_RULES",subs:["TRY_IT_1","TRY_IT_2"]},
-    {func:"MAKING_ACCEPTING_AND_REFUSING_OFFERS",subs:["TRY_IT_1","TRY_IT_2"]},
-    {func:"TALKING_ABOUT_WILLINGNESS",subs:["TRY_IT_1","TRY_IT_2"]},
-    {func:"INVITING_AND_HANDLING_QUESTIONS",subs:["TRY_IT_1"]},
-    {func:"ASKING_FOR_OFFERING_AND_PROVIDING_CLARIFICATION",subs:["TRY_IT_1","TRY_IT_2"]},
-    {func:"TALKING_ABOUT_REQUIREMENTS_AND_NECESSITIES",subs:["TRY_IT_1","TRY_IT_2"]},
-    {func:"TALKING_ABOUT_MISTAKES",subs:["TRY_IT_1"]},
-    {func:"TALKING_ABOUT_ABBREVIATIONS",subs:["TRY_IT_1","TRY_IT_2"]},
-    {func:"ASSIGNING_TASKS",subs:["TRY_IT_1","TRY_IT_2"]},
-    {func:"TALKING_ABOUT_ROLES_AND_RESPONSIBILITIES",subs:["TRY_IT_1","TRY_IT_2"]},
-    {func:"TALKING_ABOUT_PURPOSE_AND_FUNCTION",subs:["TRY_IT_1","TRY_IT_2"]},
-    {func:"TALKING_ABOUT_RANGE_AND_DURATION",subs:["TRY_IT_1","TRY_IT_2"]}
-  ];
-  function getPrompts(item){
-    return new Promise((resolve,reject)=>{
-      const script=document.createElement('script');
-      const sub = item.subs.length>1 ? Math.floor(Math.random()*item.subs.length) : 0;
-      const base = `${resources_bb_url}${item.func}/${item.subs[sub]}/`;
-      script.src = base + 'prompts.js';
-      script.onload=()=>{
-        const loaded = window.prompts || [];
-        for(let p of loaded){
-          if(p.audio) p.audio = base + p.audio;
-          if(p.image) p.image = base + p.image;
-        }
-        resolve(loaded);
-      };
-      script.onerror=()=>reject(new Error('CORS or load error: '+script.src));
-      document.head.appendChild(script);
-    });
-  }
-  async function loadRemotePrompts(){
-    const promises = targetFunctions.map(getPrompts);
-    const blocks = await Promise.all(promises);
-    promptBank = [];
-    blocks.forEach(arr=>{ shuffle(arr); promptBank.push(arr[0]); });
-    finalizePrompts(false);
-  }
+      // أوقف أي تشغيل سابق
+      try { player.pause(); player.currentTime = 0; } catch(_) {}
 
-  // ---------- إنهاء التحضير (صوت/عداد/إخفاء overlay) ----------
-  function finalizePrompts(isLocal){
-    shuffle(promptBank);
-    sounds = promptBank.map(p=>p.audio + (p.audio.endsWith('.mp3')?'':'.mp3'));
-    audioElements = sounds.map(src=>{
-      const a=new Audio(src);
-      a.onended=()=>$('#butt2').fadeIn(150);
-      return a;
-    });
-    // تهيئة مسبقة لمنع قص البداية
-    primeAudios([badge,instr,endBlurb,...audioElements]);
-
-    // عرض الصفحة
-    document.getElementById('overlay').style.display='none';
-    document.getElementById('cont').hidden=false;
-    $("#pCount").hide();
-    $("#pto").text(promptBank.length);
-
-    // لو محلي: لا صور خارجية
-    if(isLocal){
-      promptBank = promptBank.map(p=>({text:p.text, audio:p.audio, image:p.image||''}));
+      if (src) {
+        player.src = src;
+        const p = player.play();
+        if (p && p.catch) p.catch(()=>{}); // iOS لو يحتاج تفاعل
+      } else {
+        // بدون صوت → نُظهر الزر مباشرة
+        btn.disabled = false;
+      }
     }
-  }
 
-  // ---------- خط iniz ----------
-  (async function init(){
-    // حاول محلي أولاً
-    const okLocal = await useLocalPromptsIfAvailable();
-    if(okLocal) return;
+    // عند انتهاء الصوت → فعّل زر Next
+    player.onended = () => { btn.disabled = false; };
 
-    // لو فشل المحلي: جرّب عن بُعد
-    try{
-      await loadRemotePrompts();
-    }catch(e){
-      // ممنوع CORS أو فشل التحميل — لا نعلّق
-      document.getElementById('fallbackMsg').style.display='block';
-      // نظهر الصفحة ونسمح بالبدء لتجربة المقدمة/التعليمات فقط
-      document.getElementById('overlay').style.display='none';
-      document.getElementById('cont').hidden=false;
-      $("#butt").show();
+    function next() {
+      btn.disabled = true; // منع الدبل-كلك
+
+      // أول ضغطة = ابدأ من 0
+      if (i < 0) i = 0;
+      else i = i + 1;
+
+      // انتهينا؟
+      if (i >= bank.length) {
+        promptEl.style.display = 'none';
+        imgBox.style.display = 'none';
+        doneEl.style.display = 'block';
+        btn.style.display = 'none';
+        updateCounter();
+        return;
+      }
+
+      // أعرض السؤال وشغّل صوته المطابق
+      const item = bank[i];
+      showPrompt(item);
+      updateCounter();
+
+      // “Start” لأول مرة، ثم “Next”
+      btn.textContent = (i === 0 ? 'Next' : 'Next');
+
+      playAudioFor(item);
     }
-  })();
+
+    // ——— زر البدء/التالي (أول تفاعل يفتح الصوت على iOS) ———
+    btn.addEventListener('click', next, false);
+    btn.addEventListener('pointerup', next, false);
+
+    // لو صورة ناقصة (404) لا تخرب التخطيط
+    pimg.addEventListener('error', () => { imgBox.style.display = 'none'; });
+
+    // عند التحميل، حدّث العداد
+    updateCounter();
   </script>
 </body>
 </html>
